compiler/tools/fpp-check/test/invalid_symbols/module_as_topology.fpp
module M {

  topology T {

    import M

  }

}
